# ferret-8

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  decoder.rs  emulator.rs  frontend.rs  main.rs
src/decoder/: error.rs  opcodes.rs
src/emulator/: display.rs  error.rs  font.rs  stack.rs
src/emulator/stack/: error.rs
